--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-tabs": "^3.2.1",
+    "web-push": "^3.4.4",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
